Resolves button overflow issue on approval proposal voting card (#258)

--- a/src/components/Proposals/ProposalPage/OPProposalApprovalPage/OPProposalApprovalPage.module.scss
+++ b/src/components/Proposals/ProposalPage/OPProposalApprovalPage/OPProposalApprovalPage.module.scss
@@ -23,7 +23,6 @@
 .proposal_votes_container {
   position: sticky;
   top: $spacing-20;
-  max-height: calc(100vh - 162px);
   flex-shrink: 0;
   width: $max-width-sm;
   background-color: $white;
